--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,7 @@
 }
 body{
     font-family: "Poppins", sans-serif;
-    background: #fff;
+    background:url();
 }
 header{
     display: flex;
@@ -25,11 +25,11 @@ ul{
     list-style: none;
 }
 .logo-part{
-    flex: 3;
+    flex: 1;
     padding: 20px;
     font-weight: 800;
     font-size: 24px;
-    margin-left: 100px;
+    margin-left: 50px;
     
 }
 
@@ -66,4 +66,90 @@ ul{
     margin: 4px;
     background: #6070ff;
     display: flex;
+}
+
+section {
+    display: block;
+  }
+  
+  .main {
+    background-color: #fff;
+    margin-bottom: 100px;
+  }
+  
+  .wrapper {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+  }
+  
+  .intro-text {
+    width: 58%;
+  }
+  
+  .intro-text h1 {
+    margin-top: 200px;
+    font-weight: 700;
+    font-size: 48px;
+    line-height: 60px;
+    align-items: center;
+    letter-spacing: 0.37px;
+    color: #091e42;
+    margin-bottom: 2%;
+  }
+  
+  .main-text {
+    grid-column: 3;
+    grid-row: 10;
+    width: 58%;
+  }
+  
+  .text-description {
+    font-weight: 400;
+    font-size: 20px;
+    line-height: 28px;
+    color: #344653;
+  }
+  
+  .social {
+    align-self: flex-start;
+    margin-bottom: 5%;
+  }
+  
+  .connection {
+    /* width: 11px; */
+    height: 24px;
+    font-size: 30px;
+    line-height: 24px;
+    color: #7f8cff;
+    font-weight: 900;
+    padding: 20px 0;
+  }
+  .media-icons{
+      display: flex;
+      align-content: center;
+      /* justify-content: space-evenly; */
+      gap:15px;
+      left: 6.4%;
+      bottom: 18.88%;
+      top: 77.81%;
+      width: 100%;
+      padding-top: 20px;
+   } 
+   
+  .social ul {
+    list-style: none;
+   
+  }
+.fa-brands{
+    color: #505f79;
+    font-size: 35px;
+    font-weight: 500;
+   
+}
+.fa-solid{
+    color: #505f79;
+    font-size: 35px;
+    font-weight: 500;
 }
