--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600&display=swap');
+
 *{
     margin: 0;
     padding: 0;
@@ -13,6 +15,8 @@ header{
     align-items: center;
     align-content: center;
     padding: 15px;
+    max-width: 375px;
+    margin: 0 auto;
 }
 nav{
     display: flex;
@@ -24,13 +28,12 @@ nav{
 ul{
     list-style: none;
 }
-.logo-part{
-    flex: 1;
-    padding: 20px;
-    font-weight: 800;
-    font-size: 24px;
-    margin-left: 50px;
-    
+
+.logo-part {
+  flex: 1;
+  padding: 20px;
+  font-weight: 800;
+  font-size: 24px;
 }
 
 .logo-part a{
@@ -70,19 +73,19 @@ ul{
 
 section {
     display: block;
+    margin: 0 auto;
+    max-width: 375px;
   }
-  
-  .main {
-    background:url(/images/header-shapes\ mobile.png);
-    background-repeat: no-repeat;
-    /* object-fit:; */
-    margin-bottom: 100px;
-    /* width: 400px; */
-    /* left: -34; */
-    top: 120;
-    /* height:718px; */
-    background-size: 375px ;
 
+
+  .background {
+    background:url(/images/header-shapes-mobile.svg);
+    max-width: 375px;
+    background-repeat: no-repeat;
+    object-fit: cover;
+    height: 100%;
+    left: -34px;
+    margin-top: 20%;
   }
   
   .wrapper {
@@ -93,24 +96,24 @@ section {
   }
   
   .intro-text {
-    width: 58%;
+    max-width: 375px;
   }
-  
   .intro-text h1 {
-    margin-top: 200px;
     font-weight: 700;
     font-size: 48px;
-    line-height: 60px;
+    line-height: 50px;
     align-items: center;
     letter-spacing: 0.37px;
     color: #091e42;
-    margin-bottom: 2%;
-  }
+    margin-top: 40%;
+    padding: 0 7%;
+}
+
   
   .main-text {
     grid-column: 3;
     grid-row: 10;
-    width: 58%;
+    padding: 7%;
   }
   
   .text-description {
@@ -132,7 +135,7 @@ section {
     line-height: 24px;
     color: #7f8cff;
     font-weight: 900;
-    padding: 40px 0;
+    padding: 20px 0;
   }
   .media-icons{
       display: flex;
@@ -153,12 +156,12 @@ section {
   }
 .fa-brands{
     color: #505f79;
-    font-size: 35px;
+    font-size: 20px;
     font-weight: 500;
    
 }
 .fa-solid{
     color: #505f79;
-    font-size: 35px;
+    font-size: 20px;
     font-weight: 500;
 }
