--- a/css/style.css
+++ b/css/style.css
@@ -15,7 +15,7 @@ header {
   justify-content: center;
   align-items: center;
   align-content: center;
-  padding: 15px;
+  padding: 11px;
   max-width: 375px;
   margin: 0 auto;
 }
@@ -40,6 +40,12 @@ ul {
 
 .logo-text {
   color: #6070ff;
+  list-style: none;
+}
+.logo-text a{
+  text-decoration: none;
+  color: #6070ff;
+  
 }
 
 .menu-part {
