--- a/css/style.css
+++ b/css/style.css
@@ -42,10 +42,10 @@ ul {
   color: #6070ff;
   list-style: none;
 }
-.logo-text a{
+
+.logo-text a {
   text-decoration: none;
   color: #6070ff;
-  
 }
 
 .menu-part {
@@ -88,7 +88,7 @@ section {
 }
 
 .background {
-  background: url(/images/header-shapes-mobile.svg);
+  background: url(/images/header-shapes-mobile.png);
   max-width: 375px;
   background-repeat: no-repeat;
   object-fit: cover;
