--- a/css/style.css
+++ b/css/style.css
@@ -173,3 +173,205 @@ section {
   font-size: 20px;
   font-weight: 500;
 }
+
+
+.container {
+  margin: 0 auto;
+  /* max-width: 1000px; */
+  height: 100%;
+  display: grid;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  /* width: 100%; */
+}
+
+.card {
+  box-sizing: border-box;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 12px;
+  width: 360px;
+  height: 600px;
+  background: #ffffff;
+  border: 1px solid #dfe1e6;
+  border-radius: 16px;
+  flex: none;
+  order: 0;
+  flex-grow: 0;
+  margin: 10px;
+  border: 1px solid black;
+}
+
+.image {
+  width: 295px;
+  height: 220px;
+  top: 16px;
+  padding-top: 10px;
+  object-fit: fill;
+  border-radius: 8px;
+  margin: 5px;
+}
+
+.left-card1-block {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  padding: 0px;
+  gap: 12px;
+  width: 295px;
+  height: 288px;
+
+}
+
+.project-title {
+  height: 36px;
+  font-family: 'Poppins', sans-serif;
+  font-style: normal;
+  font-weight: 700;
+  font-size: 32px;
+  line-height: 44px;
+  color: #172b4d;
+  margin-top: 30px;
+  padding-left: 0;
+  /* left: 0%; */
+}
+
+.project-badges {
+  display: flex;
+  align-items: flex-start;
+  padding: 0px;
+  gap: 8px;
+  /* width: 295px; */
+  height: 35px;
+  font-size: 13px;
+  color: #344563;
+  list-style: none;
+  padding: 5px;
+  flex: none;
+  order: 0;
+  flex-grow: 0;
+}
+
+.project-badges .text-1 {
+  height: 16px;
+  font-family: 'Poppins', sans-serif;
+  font-style: bold;
+  font-weight: 600;
+  font-size: 20px;
+  text-transform: uppercase;
+  line-height: 16px;
+  color: #344563;
+  margin-left: 2px;
+
+}
+
+.counter-image {
+  background: #c1c7d0;
+  /* order: 1; */
+  border-radius: 50%;
+}
+
+.text-2 {
+  color: #7A869A;
+  flex: 2;
+  height: 16px;
+  font-family: 'Poppins', sans-serif;
+  font-style: bold;
+  font-weight: 600;
+  font-size: 20px;
+  line-height: 16px;
+}
+
+.text-3 {
+  color: #7A869A;
+  flex: 2;
+  height: 16px;
+  font-family: 'Poppins', sans-serif;
+  font-style: bold;
+  font-weight: 600;
+  font-size: 20px;
+  line-height: 16px;
+}
+
+.project-description {
+  color: #344563;
+  font-weight: 400;
+  font-style: normal;
+  line-height: 1.6rem;
+  font-size: 16px;
+}
+
+.language-categories {
+  display: flex;
+  gap: 10px;
+  padding: 4px 12px;
+  list-style: none;
+  margin-bottom: -10px;
+  flex-direction: row;
+  margin-top: -12%;
+}
+
+.language-categories>li {
+  display: flex;
+  align-items: center;
+  padding: 4px 20px;
+  background: #ebebff;
+  border-radius: 5px;
+  text-align: center;
+  font-weight: 500;
+  font-size: 12px;
+  color: #6070ff;
+  letter-spacing: 0.03em;
+  line-height: 30px;
+  margin-top: -2px;
+
+}
+
+.submit-btn {
+  background-color: #fff;
+  color: #396DF2;
+  border: 1px solid black;
+  border-radius: 15px;
+  padding: 10px;
+  margin-left: 2px;
+  margin-top: 5%;
+  width: 150px;
+  height: 100px;
+  font-family: 'Poppins', sans-serif;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 17px;
+  line-height: 24px;
+  display: flex;
+  align-items: center;
+  text-align: center;
+  letter-spacing: 0.03em;
+}
+.container-about{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100%;
+}
+.title-about{
+  top:4769px;
+  width: 375px;
+  height: 1263px;
+  position: absolute;
+  background-color: #ffffff;
+  transform: rotate(-180deg);
+
+}
+.title-about h1 {
+  font-weight: 700;
+  font-size: 40px;
+  line-height: 50px;
+  letter-spacing: 0.37px;
+  color: #172b4d;
+  margin-top: 20%;
+  padding: 0 7%;
+  align-items: flex-start;
+  
+}
