--- a/css/style.css
+++ b/css/style.css
@@ -355,6 +355,23 @@ section {
   align-items: center;
   height: 100%;
 }
+.card-about {
+  box-sizing: border-box;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 12px;
+  width: 360px;
+  height: 100%;
+  background: #ffffff;
+  border: 1px solid #dfe1e6;
+  border-radius: 16px;
+  flex: none;
+  order: 0;
+  flex-grow: 0;
+  margin: 10px;
+  border: 1px solid black;
+}
 .title-about h1 {
   top: 1000px;
   font-weight: 700;
