--- a/css/style.css
+++ b/css/style.css
@@ -177,13 +177,13 @@ section {
 
 .container {
   margin: 0 auto;
-  /* max-width: 1000px; */
+  max-width: 1000px;
   height: 100%;
   display: grid;
   justify-content: center;
   align-items: center;
   text-align: center;
-  /* width: 100%; */
+  width: 100%;
 }
 
 .card {
@@ -350,7 +350,7 @@ section {
   letter-spacing: 0.03em;
 }
 .container-about{
-  display: flex;
+  display: grid;
   justify-content: center;
   align-items: center;
   height: 100%;
@@ -362,15 +362,15 @@ section {
   align-items: center;
   gap: 12px;
   width: 360px;
-  height: 100%;
+  /* height: 100%; */
   background: #ffffff;
-  border: 1px solid #dfe1e6;
-  border-radius: 16px;
+  border: 1px solid #f0e9e9;
+  border-top-right-radius: 50px;
   flex: none;
   order: 0;
   flex-grow: 0;
-  margin: 10px;
-  border: 1px solid black;
+  margin-top: 30px;
+  /* border: 1px solid black; */
 }
 .title-about h1 {
   top: 1000px;
@@ -461,5 +461,72 @@ section {
     font-weight: 500;
   }
   
-  
 
+.lang {
+  display: flex;
+  justify-content: center;
+  align-items: flex-start;
+  margin-top: 60px;
+  max-width: 375px;
+  height: 100%;
+ 
+}
+.about-lang{
+  font-size: 30px;
+  margin-top: 60px;
+  display: flex;
+  font-family: "Poppins", sans-serif;
+  align-items: flex-start;
+  font-weight: 800;
+  letter-spacing: 0.37px;
+  position: absolute;
+  height: 24px;
+  left: 35%;
+  right: 100px;
+  color:#000000;
+
+}
+
+.lang-list{
+  display: flex;
+  flex-direction: column;
+  gap: 10%;
+  justify-content: center;
+  align-items: flex-start;
+  margin-top: 70px;
+  max-width: 375px;
+  height: 100%;
+  margin-left: -20%;
+}
+.three-lang{
+width: 303px;
+height: 66.72px;
+background: #F7F7F9;
+border-radius: 8px;
+/* flex: none; */
+order: 2;
+flex-grow: 0;
+list-style: none;
+gap: 50%;
+display: flex;
+flex-direction: column;
+
+}
+.language-list{
+  display: flex;
+  /* gap: 50px; */
+  height: 80px;
+  width: 100%;
+  
+  color: blue;
+}
+.three-lang li{
+  border: 1px solid black;
+  border-radius: 10px;
+  /* display: flex; */
+  gap: 10%;
+}
+.language{
+  display: flex;
+  
+}
