added hover effect .submit-btn

--- a/css/style.css
+++ b/css/style.css
@@ -344,8 +344,12 @@ section {
   text-align: center;
   letter-spacing: 0.03em;
   border: 1px solid #396df2;
+  transform: translate(0.5s);
 }
-
+.submit-btn:hover{
+  color:#396df2;
+  transition: 0.5s;
+}
 .container-about {
   display: grid;
   justify-content: center;
