--- a/css/style.css
+++ b/css/style.css
@@ -638,16 +638,17 @@ textarea {
 .submit-btn2 {
   display: flex;
   align-items: center;
-  padding: 12px 16px;
-  width: 170px;
+  padding: 12px 18px 12px 18px;
+  width: 140px;
   height: 48px;
-  left: 510px;
+  left: 470px;
   top: 5470px;
   background: #fff;
   border-radius: 8px;
   border: none;
-  color: #6070ff;
+  color: #6070FF;
   font-size: 17px;
+  margin-right: 0px;
 }
 
 .img-form {
