--- a/css/style.css
+++ b/css/style.css
@@ -168,24 +168,115 @@ body {
   .left-card1-block{
     display: flex;
     flex-direction: column;
-    padding: 0 20px;
     background: #FFFFFF;
-border: 1px solid #DFE1E6;
-border-radius: 24px;
+    border: 1px solid #DFE1E6;
+    border-radius: 24px;
+    margin: 20px;
+    border: 1px solid black;
 }
   .project-title{
-    width: 496px;
-    height: 46px;
+    margin: 8px;
     font-family: 'Poppins';
     font-style: normal;
     font-weight: 700;
     font-size: 40px;
     line-height: 52px;
-    color: #091E42
+    color: #091E42;
+  }
+  
+  .project-badges{
+    list-style: none;
+    border: 1px solid black;
+    display: flex;
+    gap: 15px;
+    height:40px;
+  }
 
+  .counter-image{
+    width: 10px;
+    height: 10px;
+    padding: 6px;
+    margin-top: 4px;
+    background: #C1C7D0;
+    flex: none;
+    border-radius: 50%;
+    flex-grow: 0;
+  }
 
+  .text-1{
+    width: 75px;
+    height: 24px;
+    font-family: 'Poppins';
+    font-style: normal;
+    font-weight: 500;
+    font-size: 18px;
+    line-height: 24px;
+    color: #344563;
+    flex: none;
+    order: 0;
+    flex-grow: 0;
+  }
 
+  .text-2{
+    width: 120px;
+    height: 24px;
+    font-family: 'Poppins';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 18px;
+    line-height: 24px;
+    color: #6B778C;
+    flex: none;
+    order: 0;
+    flex-grow: 0;
+  }
 
+  .text-3{
+    width: 38px;
+    height: 24px;
+    font-family: 'Poppins';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 18px;
+    line-height: 24px;
+    color: #6B778C;
+    flex: none;
+    order: 0;
+    flex-grow: 0;
+  }
+
+  .project-description{
+    /* width: 496px; */
+    /* height: 50px; */
+    font-family: 'Poppins';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 24px;
+    color: #344563;
+    flex: none;
+    /* order: 1; */
+    flex-grow: 0;
+    margin-top: 30px;
+  }
+
+  .language-categories{
+    list-style: none;
+    display: flex;
+    gap:20px;
+  
+  }
+  .language-categories li{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    padding: 4px 12px;
+    width: 89px;
+    height: 24px;
+    background: #EBEBFF;
+    border-radius: 8px;
+    flex: none;
+    flex-grow: 0;
   }
     
   .image{
@@ -199,7 +290,6 @@ border-radius: 24px;
     margin: 5px;
     object-fit: cover;
     padding: 2px 0;
-    /* margin: 2px 0; */
   }
 
   .desktop-image2{
@@ -218,6 +308,33 @@ border-radius: 24px;
     margin: 5px;
     object-fit: cover;
 
+  }
+
+  .submit-btn {
+    background-color: #fff;
+    color: #396df2;
+    border-radius: 16px;
+    padding: 10px;
+    margin-left: 2px;
+    margin-top: 5%;
+    width: 150px;
+    height: 100px;
+    font-family: 'Poppins', sans-serif;
+    font-style: normal;
+    font-weight: 500;
+    font-size: 17px;
+    line-height: 24px;
+    display: flex;
+    align-items: center;
+    text-align: center;
+    letter-spacing: 0.03em;
+    border: 1px solid #396df2;
+    transform: translate(0.5s);
+  }
+  
+  .submit-btn:hover {
+    color: #396df2;
+    transition: 0.5s;
   }
 }
 
@@ -493,8 +610,6 @@ border-radius: 24px;
   
   .counter-image {
     background: #c1c7d0;
-  
-    /* order: 1; */
     border-radius: 50%;
   }
   
